      between grids of different value types.
    - Fixed a bug whereby the origins of leaf nodes with value type bool
      were ignored during equality comparisons.
    - tools::GridTransformer now correctly handles affine transforms with
      shear and/or reflection.
    - Fixed a bug in tools::meshToVolume() that could produce
      incorrect distances for large narrow-band widths.
    - Resolved a floating-point exception in math::QuantizedUnitVec::pack()
      caused by calling the method with a zero-length vector.
      [Contributed by Rick Hankins]

    API changes:
    - Renamed math::GudonovsNormSqrd to math::GodunovsNormSqrd
      [Contributed by Branislav Radjenovic]
    - Renamed ValueType to PosType in the PointArray interface.

    Python:
    - Updated the Python module for Python 3 compatibility.

    Maya:
    - Fixed bugs related to data ownership, and improved error checking.
      [Contributed by Crawford Doran]
    - Updated the Read and Write DAG nodes to support file sequences
      and subframe evaluation.

    Houdini:
    - Added a Segment SOP that separates a grid's connected components
      into distinct grids.
    - Added a Topology Mask SOP that generates a mask grid from either
      the active voxels in a grid or from positions in a point cloud.
      The SOP supports Houdini 15's packed points.
    - Added a From Mask SOP that generates a level set or fog volume from
      the implicit boundary between active and inactive voxels in an
      input grid of arbitrary type.
    - The Resample and Combine SOPs now correctly handle affine transforms
      with shear and/or reflection.
    - Updated the Rasterize Points SOP to match the native Copy SOP's
      instancing behavior.
    - Fixed a bug in the Ray SOP whereby the distance attribute was created
      with the wrong data type.
      [Contributed by Nick Avramoussis]

Version 3.1.0 - October 1, 2015

    Highlights: