@@ -214,8 +214,13 @@ SOP_OpenVDB_Clip::cookMySop(OP_Context& context)
             if (useMask) {
                 UT_String maskStr;
                 evalString(maskStr, "mask", 0, time);
+#if (UT_MAJOR_VERSION_INT >= 15)
+                const GA_PrimitiveGroup* maskGroup = parsePrimitiveGroups(
+                    maskStr.buffer(), GroupCreator(maskGeo));
+#else
                 const GA_PrimitiveGroup* maskGroup = parsePrimitiveGroups(
                     maskStr.buffer(), const_cast<GU_Detail*>(maskGeo));
+#endif
                 hvdb::VdbPrimCIterator maskIt(maskGeo, maskGroup);
                 if (maskIt) {
                     if (maskIt->getConstGrid().getGridClass() == openvdb::GRID_LEVEL_SET) {
