@@ -1180,9 +1180,13 @@ SOP_OpenVDB_Convert::convertToPoly(
         if (evalInt("surfacemask", 0, time)) {
             UT_String maskStr;
             evalString(maskStr, "surfacemaskname", 0, time);
-
+#if (UT_MAJOR_VERSION_INT >= 15)
+            const GA_PrimitiveGroup * maskGroup =
+                parsePrimitiveGroups(maskStr.buffer(), GroupCreator(maskGeo));
+#else
             const GA_PrimitiveGroup * maskGroup =
                 parsePrimitiveGroups(maskStr.buffer(), const_cast<GU_Detail*>(maskGeo));
+#endif
 
             if (!maskGroup && maskStr.length() > 0) {
                 addWarning(SOP_MESSAGE, "Surface mask not found.");
@@ -1344,7 +1348,12 @@ SOP_OpenVDB_Convert::cookMySop(OP_Context& context)
 
         UT_String group_str;
         evalString(group_str, "group", 0, t);
+
+#if (UT_MAJOR_VERSION_INT >= 15)
+        GA_PrimitiveGroup* group = parsePrimitiveGroupsCopy(group_str, GroupCreator(gdp));
+#else
         GA_PrimitiveGroup* group = parsePrimitiveGroupsCopy(group_str, gdp);
+#endif
 
         hvdb::Interrupter interrupter("Convert");
 
